--- a/app/src/main/res/layout/fragment_quote_details_dialog.xml
+++ b/app/src/main/res/layout/fragment_quote_details_dialog.xml
@@ -60,7 +60,7 @@
                     android:layout_marginTop="@dimen/size_10dp"
                     android:buttonTint="@color/button_blue"
                     android:checked="true"
-                    android:fontFamily="@font/poppins_regular"
+                    android:fontFamily="@font/mulish_regular"
                     android:text="@string/i_have_quotes_details"
                     android:textColor="#B5232323"
                     android:textSize="@dimen/size_18sp" />
@@ -71,7 +71,7 @@
                     android:layout_height="wrap_content"
                     android:buttonTint="@color/button_blue"
                     android:checked="false"
-                    android:fontFamily="@font/poppins_regular"
+                    android:fontFamily="@font/mulish_regular"
                     android:text="@string/will_provide_quotes_later"
                     android:textColor="#B5232323"
                     android:textSize="@dimen/size_18sp" />
@@ -93,7 +93,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="@dimen/size_10dp"
-                    android:fontFamily="@font/poppins_bold"
+                    android:fontFamily="@font/mulish_bold"
                     android:text="@string/fork_amp_spoon"
                     android:textSize="@dimen/size_18sp"
                     app:layout_constraintStart_toStartOf="parent"
@@ -104,9 +104,9 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="@dimen/size_5dp"
-                    android:fontFamily="@font/poppins_medium"
+                    android:fontFamily="@font/mulish_medium"
                     android:text="@string/cost_estimation"
-                    android:textSize="@dimen/size_14sp"
+                    android:textSize="@dimen/size_16sp"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@id/Forks_spoon" />
 
@@ -123,9 +123,9 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_weight="1.2"
-                        android:fontFamily="@font/poppins_medium"
+                        android:fontFamily="@font/mulish_medium"
                         android:text="@string/post_any_discount"
-                        android:textSize="@dimen/size_14sp" />
+                        android:textSize="@dimen/size_16sp" />
 
                 </LinearLayout>
 
@@ -192,9 +192,9 @@
                         android:id="@+id/quote_details_upload"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:fontFamily="@font/poppins_medium"
-                        android:text="@string/quote_details"
-                        android:textSize="@dimen/size_14sp"
+                        android:fontFamily="@font/mulish_medium"
+                        android:text="Upload quote document"
+                        android:textSize="@dimen/size_16sp"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintHorizontal_bias="0.0"
                         app:layout_constraintStart_toStartOf="parent"
@@ -202,20 +202,64 @@
 
                     <androidx.appcompat.widget.AppCompatButton
                         android:id="@+id/btn_file_upload"
-                        android:layout_width="wrap_content"
-                        android:layout_height="match_parent"
+                        android:layout_width="@dimen/size_150dp"
+                        android:layout_height="@dimen/size_40dp"
                         android:layout_marginStart="@dimen/size_1dp"
-                        android:layout_marginTop="@dimen/size_2dp"
+                        android:layout_marginTop="@dimen/size_12dp"
                         android:background="@drawable/custom_button_edge"
-                        android:backgroundTint="@color/green"
+                        android:backgroundTint="@color/gray"
                         android:paddingStart="@dimen/size_30dp"
                         android:paddingEnd="@dimen/size_30dp"
-                        android:text="@string/choose_file"
-                        android:textColor="@color/white"
+                        android:text="@string/Uploaded"
+                        android:textAllCaps="false"
+                        android:textColor="@color/calendar_background"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintHorizontal_bias="0.0"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toBottomOf="@+id/quote_details_upload" />
+
+                    <ImageView
+                        android:visibility="gone"
+                        android:layout_marginTop="@dimen/size_10dp"
+                        android:id="@+id/file_img"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:src="@drawable/doc"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintHorizontal_bias="0.0"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toBottomOf="@+id/btn_file_upload"
+                        app:layout_constraintVertical_bias="0.0" />
+
+                    <TextView
+                        android:visibility="gone"
+                        android:layout_marginTop="@dimen/size_10dp"
+                        android:id="@+id/filename_tx"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="@string/quotesite_pdf"
+                        android:textColor="@color/calendar_border_darl_gray"
+                        android:textSize="@dimen/size_18sp"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintHorizontal_bias="0.0"
+                        app:layout_constraintStart_toEndOf="@+id/file_img"
+                        app:layout_constraintTop_toBottomOf="@+id/btn_file_upload" />
+
+                    <ImageView
+                        android:visibility="gone"
+                        android:layout_marginTop="@dimen/size_10dp"
+                        android:id="@+id/file_img_delete"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:src="@drawable/trash"
+                        android:layout_marginStart="@dimen/size_8dp"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintHorizontal_bias="0.05"
+                        app:layout_constraintStart_toEndOf="@+id/filename_tx"
+                        app:layout_constraintTop_toBottomOf="@+id/btn_file_upload" />
 
                 </androidx.constraintlayout.widget.ConstraintLayout>
 
@@ -224,7 +268,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="@dimen/size_10dp"
-                    android:fontFamily="@font/poppins_medium"
+                    android:fontFamily="@font/mulish_medium"
                     android:text="@string/comments"
                     android:textSize="@dimen/size_18sp"
                     app:layout_constraintStart_toStartOf="parent"
@@ -259,10 +303,12 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="18dp"
+                    android:layout_marginBottom="@dimen/size_8dp"
                     android:layout_marginRight="@dimen/size_5dp"
                     android:layout_weight="1.5"
                     android:background="@drawable/custom_button_corner_cancel"
-                    android:text="@string/cancel" />
+                    android:text="@string/cancel"
+                    android:textAllCaps="false" />
 
                 <androidx.appcompat.widget.AppCompatButton
                     android:id="@+id/btn_ok"
@@ -273,7 +319,10 @@
                     android:layout_weight="1.5"
                     android:background="@drawable/custom_button_corner_ok"
                     android:text="@string/ok"
-                    android:textColor="@color/white" />
+                    android:textAllCaps="false"
+                    android:textColor="@color/white"
+
+                    android:layout_marginBottom="@dimen/size_8dp"/>
 
             </LinearLayout>
 
