--- a/app/src/main/res/layout/quote_brief_dialog.xml
+++ b/app/src/main/res/layout/quote_brief_dialog.xml
@@ -105,17 +105,18 @@
                         <TextView
                             android:id="@+id/tx_job_amount"
                             android:layout_width="wrap_content"
-                            android:layout_height="@dimen/size_24dp"
+                            android:layout_height="wrap_content"
                             android:layout_marginEnd="8dp"
                             android:fontFamily="@font/mulish_semi_bold"
                             android:text="@string/_2500"
                             android:textColor="@color/black_event_title"
                             android:textSize="@dimen/size_22sp"
-                            app:layout_constraintBottom_toBottomOf="@+id/tx_job_title"
+                            app:layout_constraintBottom_toBottomOf="parent"
                             app:layout_constraintEnd_toEndOf="parent"
                             app:layout_constraintHorizontal_bias="1.0"
                             app:layout_constraintStart_toEndOf="@+id/tx_job_title"
-                            app:layout_constraintTop_toTopOf="parent" />
+                            app:layout_constraintTop_toTopOf="parent"
+                            app:layout_constraintVertical_bias="0.0" />
 
                         <TextView
                             android:id="@+id/tx_job_idnum"
