--- a/app/src/main/res/layout/fragment_time_slots.xml
+++ b/app/src/main/res/layout/fragment_time_slots.xml
@@ -21,8 +21,8 @@
         <androidx.appcompat.widget.LinearLayoutCompat
             android:layout_width="match_parent"
             android:layout_height="@dimen/size_45dp"
-            android:backgroundTint="@color/light_gray_background"
-            android:background="@drawable/corner_radius_background">
+            android:background="@drawable/corner_radius_background"
+            android:backgroundTint="@color/light_gray_background">
 
             <com.google.android.material.tabs.TabLayout
                 android:id="@+id/tabLayout"
@@ -40,11 +40,14 @@
                 app:tabTextAppearance="@style/CustomTextAppearance" />
         </androidx.appcompat.widget.LinearLayoutCompat>
 
-        <androidx.viewpager2.widget.ViewPager2
-            android:id="@+id/viewPager"
+        <FrameLayout
+            android:id="@+id/expandable_fragment"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_marginTop="@dimen/size_20dp" />
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/size_25dp"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/switch_btn" />
 
     </LinearLayout>
 
