--- a/app/src/main/res/layout/time_slot_list.xml
+++ b/app/src/main/res/layout/time_slot_list.xml
@@ -116,6 +116,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:visibility="gone"
+        android:indeterminateDrawable="@drawable/custom_progrss_bar"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
